Realign the password reset button (https://github.com/FrontEnd-ro/frontend.ro/issues/497)

--- a/client/components/login/LoginButtons/LoginButtons.module.scss
+++ b/client/components/login/LoginButtons/LoginButtons.module.scss
@@ -14,11 +14,11 @@
 }
 
 .register-mode {
-  button:first-of-type {
+  .login-button {
     transform: translateY(5em);
   }
 
-  button:nth-of-type(2) {
+  .register-button {
     transform: translateY(-5em);
   }
 }
